--- a/Capstone.Web/Web.config
+++ b/Capstone.Web/Web.config
@@ -19,6 +19,12 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
+  <system.webServer>
+    <httpErrors>
+      
+      <error statusCode="404" path="/home/pagenotfound" responseMode="Redirect"/>
+    </httpErrors>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
